Refactoring + mostrar balances de las cuentas en sepholia. Tanto a nivel eth como tkns